--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
-        <script src="zone.js"></script>
+        <script src="./zone.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
